##Text encoding: utf-8

2010-12-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/arrows/curvedarrowtool.cc: removed a printf debug statement.

2010-12-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.

2010-12-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fixed electrons lone pairs count for atoms with
	an xtended octet.
	* libs/gcp/tool.cc: fixed a crash in goffice plugin.
	* plugins/paint/residues/residues-dlg.cc: don't use deprecated
	GtkNotebookPage.
	* programs/calc/gchemcalc.cc: ditto.

2010-12-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/tool.cc: do not allow document changes using keyboard while
	dragging the mouse. [#31812]
	* libs/gcp/view.cc: ditto.
	* libs/gcp/window.cc: ditto.

2010-11-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.6).

2010-11-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* mozilla-plugin/moz-plugin.c: fix typo.

2010-11-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: fix NMR spectrum integration.

2010-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fixed undo after erasing atoms and/or bonds.
	* plugins/paint/selection/erasertool.cc: ditto.

2010-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/line-item.h: make line width change the bounds. [#31654]

2010-11-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: test for exp10 and use pow instead if not available.
	[#31606]
	* libs/gcu/spectrumdoc.cc: ditto.

2010-10-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* database/space-groups.xml.in: fixed group 104.

2010-10-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/object.cc: fixed crash in Object::Clear(). (Fredora #637564)

2010-09-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.5).
