@@ -3,6 +3,7 @@ Version 0.12.6
 		* Do not allow document changes using keyboard while
 		dragging the mouse. [#31812]
 		* Fix electrons lone pairs count.
+		* Destroy a mechanismstep when the last arrow is removed.
 	GOffice component:
 		* Do not crash when selecting a tool.
 
