@@ -1,5 +1,9 @@
 ##Text encoding: utf-8
 
+2010-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
+	* libs/gcp/mechanism-step.cc: destroy a mechanismstep when the last arrow
+	is removed.
+
 2010-12-16  Jean Bréfort  <jean.brefort@normalesup.org>
 	* plugins/paint/arrows/curvedarrowtool.cc: removed a printf debug statement.
 
